ex1.13_todos/w_old/m221/service-fe.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-fe-svc
spec:
  type: ClusterIP
  selector:
    app: todos-fe
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
